<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"

    android:id="@+id/list_itemId"
    android:background="@color/lightGrey"
    android:orientation="horizontal"
    android:weightSum="5">

    <ImageView
        android:id="@+id/imageViewMoviePicture"
        android:layout_width="@dimen/imageViewWidth"
        android:layout_height="@dimen/imageViewHeight"
        android:contentDescription="@string/imageview"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/marginFiveDp"
        android:layout_marginLeft="@dimen/marginFiveDp"
        android:layout_weight="1"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <TextView
            android:id="@+id/textViewMovieName"
            style="@style/ListRowLAyout"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textSize="@dimen/textSize"
            android:maxLines="1"
            android:paddingStart="@dimen/paddingLeft"
            android:paddingLeft="@dimen/paddingLeft"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewMovieDescription"
            android:layout_width="match_parent"
            android:paddingRight="@dimen/paddingLeft"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewMovieName"
            android:hint="@string/movie_decription"
            android:maxLines="3"
            android:paddingLeft="@dimen/paddingLeft"
            android:textColor="@color/lightGreyColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/textViewMovieNumberVotesId"
            style="@style/VotesNumber"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewMovieDescription"
            android:gravity="start"
            android:hint="@string/NumberOfVotes"
            android:paddingLeft="@dimen/paddingLeft"
            android:textSize="@dimen/textSize"
            android:textColor="@color/lightGreyColor" />

        <TextView
            android:id="@+id/textViewMovieReleaseDate"
            style="@style/ListRowLAyout"
            android:layout_below="@+id/textViewMovieNumberVotesId"
            android:hint="@string/movie_name"
            android:maxLines="3"
            android:textSize="@dimen/textSize"
            android:paddingLeft="@dimen/paddingLeft"
            android:paddingStart="@dimen/paddingLeft"
            android:textColor="@color/lightGreyColor" />

    </RelativeLayout>


</LinearLayout>